@@ -138,7 +138,7 @@ class Smarty_Internal_Compile_Include extends Smarty_Internal_CompileBase {
         } else {
             if ($has_compiled_template) {
                 $_output .= " \$_tpl_stack[] = \$_smarty_tpl; \$_smarty_tpl = \$_template;?>\n";
-                $_output .= $compiled_tpl . "<?php /*  End of included template \"" . $tpl->getTemplateFilepath() . "\" */ ?>";;
+                $_output .= $compiled_tpl . "<?php /*  End of included template \"" . $tpl->getTemplateFilepath() . "\" */ ?>";
                 $_output .= "<?php  \$_smarty_tpl = array_pop(\$_tpl_stack);?>";
             } else {
                 $_output .= " echo \$_template->fetch(); ?>";
